# zeroshot_grasping_dev

./: .gitignore  LICENSE  README.md  simulation_log.md
GraspingDemo/: QUICK_START.md  README.md  README_ROS_SETUP.md  README_SIMPLE.md  ROBOT_CONTROL_README.md  ROS2_CONTROL_README.md  compare_ik_performance.py  debug_gripper.py  digital_twin.py  preview_camera_matplotlib.py  quick_start.sh  release_torque.py  requirements.txt  ros2_control.sh  ros2_direct_run.sh  run_robot.sh  run_web_ui.sh  setup.py  show_pointcloud_info.py  start_meshcat_server.py  test_gripper_record.py  test_kinematics.py  test_motion_planning_api.py  visualize_pointcloud.py
GraspingDemo/config/: robot_config.yaml  so101_calibration.json
GraspingDemo/examples/: agent_example.py  basic_control.py  basic_control_keep_alive.py  basic_control_raw.py  (+9 more)
Graspnet_ros/: CMakeLists.txt  README.md  setup.py  typescript
Graspnet_ros/launch/: realsense_graspnet.launch.py  run_grasp_node.launch.py
Graspnet_ros/scripts/: graspnet_node.py  graspnet_pipeline.py  parameters.py
Graspnet_ros/scripts/graspnet-baseline/install/: local_setup.sh  setup.sh
Graspnet_ros/scripts/graspnet-baseline/knn/knn_pytorch.egg-info/: SOURCES.txt
Graspnet_ros/scripts/graspnet-baseline/log/: latest_build
Graspnet_ros/scripts/graspnetAPI/graspnetAPI.egg-info/: PKG-INFO
Graspnet_ros/srv/: SetSphereConstraint.srv  UpdateInterestMap.srv
Grasppose_visualizer/: README.md  start_server.py
ROS2/so_arm_visualization/: README.md  package.xml  setup.cfg  setup.py
ROS2/so_arm_visualization/launch/: so_arm_visualization.launch.py
ROS2/so_arm_visualization/so_arm_visualization/: so_arm_joint_reader.py
ThinkGrasp/: API_REFERENCE.md  QUICK_START.md  README.md  README3.10.md  README_SIMPLE.md  ROS2_BUILD_STATUS.md  ROS2_QUICK_REFERENCE.md  ROS2_SETUP_GUIDE.md  config.py  engine.py  langsam.txt  realarm.py  realarm310.py  requirements.txt  requirements_no_ray.txt  results_viewer.html  ros2_run.sh  run_ros2_client.sh  simple_grasp_client.py  start_server_no_ray.py  test_ros2_simple.py  test_thinkgrasp_api.py  thinkgrasp  utils.py
handeye/: README.md  capture_realsense.py  disable_torque.py
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
iphone_camera/: .gitignore  README.md  iphone_camera_pose_streaming_vis.py  iphone_save_rgbd.py  note.md  pre_camera_info.txt  text.txt  visualization.py
log/: latest_build
maniskill/: Log.md
mujoco_simulation_work_0713/: README.md  requirements.txt  test_gym.py
mycobot_ros2/: README.md
ros2_RobotSimulation/: UR5README.md
(+1912 files in other folders)
